--- a/wu-app/app/create_user.html
+++ b/wu-app/app/create_user.html
@@ -5,23 +5,25 @@
     <meta charset="utf-8">
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
 </head>
 
 <body>
     <noscript>Please enable <strong>WebAssembly (Rust)</strong> and <strong>JavaScript</strong></noscript>
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./create_user.js"></script>
     <div class="container">
-        <form id="loginform" class="card">
+        <form id="createform" class="card">
             <div class="card-body">
-                <h5 class="card-title">
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href=".">Webuniverse</a></li>
-                            <li class="breadcrumb-item active">Login</li>
-                        </ol>
+                <h6 class="card-title">
+                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                        <div class="navbar-nav">
+                            <a class="nav-item nav-link active" href="#">Dashboard</a>
+                            <a class="nav-item nav-link" href="./users.html">Users <span
+                                    class="sr-only">(current)</span></a>
+                            <a class="nav-item nav-link" href="#" id="logout">Logout</a>
+                        </div>
                     </nav>
-                </h5>
+                </h6>
                 <div class="form-group row justify-content-md-center">
                     <label for="username" class="col-sm-2 col-form-label">Username</label>
                     <div class="col-sm-10">
@@ -35,7 +37,7 @@
                     </div>
                 </div>
                 <div class="form-group row justify-content-md-center">
-                    <button type="submit" class="btn btn-primary">Login</button>
+                    <button type="submit" class="btn btn-primary">Create user</button>
                 </div>
             </div>
         </form>
