--- a/wu-app/index.html
+++ b/wu-app/index.html
@@ -6,12 +6,13 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <script src="./js/vue.min.js"></script>
 </head>
 
 <body>
     <noscript>Please enable <strong>WebAssembly (Rust)</strong> and <strong>JavaScript</strong></noscript>
     <script type="module" src="./js/index.js"></script>
-    <div class="container">
+    <div id="vue" class="container">
         <form id="loginform" class="card">
             <div class="card-body">
                 <h5 class="card-title">
