--- a/wu-app/app/user.html
+++ b/wu-app/app/user.html
@@ -6,34 +6,34 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <script src="../js/vue.min.js"></script>
 </head>
 
 <body>
     <noscript>Please enable <strong>WebAssembly (Rust)</strong> and <strong>JavaScript</strong></noscript>
     <script type="module" src="./user.js"></script>
-    <div class="container">
+    <div id="vue" class="container">
         <form id="changeform" class="card">
             <div class="card-body">
                 <h6 class="card-title">
                     <nav class="navbar navbar-expand-lg navbar-light bg-light">
                         <div class="navbar-nav">
-                            <a class="nav-item nav-link active" href="#">Dashboard</a>
-                            <a class="nav-item nav-link" href="./users.html">Users <span
-                                    class="sr-only">(current)</span></a>
-                            <a class="nav-item nav-link" href="#" id="logout">Logout</a>
+                            <a class="nav-item nav-link" href="./">Dashboard</a>
+                            <a class="nav-item nav-link active" href="./users.html">Users </a>
+                            <a class="nav-item nav-link" href="#" id="logout">Logout ({{ username }})</a>
                         </div>
                     </nav>
                 </h6>
                 <div class="form-group row justify-content-md-center">
-                    <label for="username" class="col-sm-2 col-form-label">Username</label>
+                    <label for="username" class="col-sm-2 col-form-label">New username</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="username" disabled placeholder="TODO">
+                        <input type="text" class="form-control" id="new_username">
                     </div>
                 </div>
                 <div class="form-group row justify-content-md-center">
-                    <label for="password" class="col-sm-2 col-form-label">Password</label>
+                    <label for="password" class="col-sm-2 col-form-label">New password</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="password" disabled placeholder="TODO">
+                        <input type="password" class="form-control" id="new_password">
                     </div>
                 </div>
                 <div class="form-group row justify-content-md-center">
