--- a/wu-app/app/index.html
+++ b/wu-app/app/index.html
@@ -6,6 +6,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/custom.css">
     <script src="../js/vue.min.js"></script>
 </head>
 
@@ -13,6 +14,9 @@
     <noscript>Please enable <strong>WebAssembly (Rust)</strong> and <strong>JavaScript</strong></noscript>
     <script type="module" src="./index.js"></script>
     <div id="vue" class="container">
+        <div class="row justify-content-md-center">
+            <img class="header-banner" src="../css/header.png" width="962" height="205">
+        </div>
         <div class="card">
             <div class="card-body">
                 <h6 class="card-title">
@@ -27,6 +31,9 @@
                 <h5>TODO: Dashboard</h5>
             </div>
         </div>
+        <div class="copyright"><small class="form-text text-muted"><a href="https://ltheinrich.de">Webuniverse
+                    &copy;
+                    2020 Lennart Heinrich</a></small></div>
     </div>
 </body>
 
