--- a/wu-app/app/users.html
+++ b/wu-app/app/users.html
@@ -23,7 +23,8 @@
                     <nav class="navbar navbar-expand-lg navbar-light bg-light">
                         <div class="navbar-nav">
                             <a class="nav-item nav-link" href="./">Dashboard</a>
-                            <a class="nav-item nav-link active" href="./users.html">Users </a>
+                            <a class="nav-item nav-link" href="./servers.html">Servers</a>
+                            <a class="nav-item nav-link active" href="./users.html">Users</a>
                             <a class="nav-item nav-link" href="#" id="logout">Logout ({{ username }})</a>
                         </div>
                     </nav>
@@ -34,8 +35,7 @@
             </div>
         </div>
         <div class="copyright"><small class="form-text text-muted"><a href="https://ltheinrich.de">Webuniverse
-                    &copy;
-                    2020 Lennart Heinrich</a></small></div>
+                    &copy; 2020 Lennart Heinrich</a></small></div>
     </div>
 </body>
 
