--- a/wu-app/index.html
+++ b/wu-app/index.html
@@ -45,8 +45,7 @@
             </div>
         </form>
         <div class="copyright"><small class="form-text text-muted"><a href="https://ltheinrich.de">Webuniverse
-                    &copy;
-                    2020 Lennart Heinrich</a></small></div>
+                    &copy; 2020 Lennart Heinrich</a></small></div>
     </div>
 </body>
 
