--- a/wu-app/app/server.html
+++ b/wu-app/app/server.html
@@ -12,26 +12,36 @@
 
 <body>
     <noscript>Please enable <strong>WebAssembly (Rust)</strong> and <strong>JavaScript</strong></noscript>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./server.js"></script>
     <div id="vue" class="container">
         <div class="row justify-content-md-center">
             <img class="header-banner" src="../css/header.png" width="962" height="205">
         </div>
-        <div class="card">
+        <form id="serverconsole" class="card">
             <div class="card-body">
                 <h6 class="card-title">
                     <nav class="navbar navbar-expand-lg navbar-light bg-light">
                         <div class="navbar-nav">
-                            <a class="nav-item nav-link active" href="./">Dashboard </a>
-                            <a class="nav-item nav-link" href="./servers.html">Servers</a>
+                            <a class="nav-item nav-link" href="./">Dashboard</a>
+                            <a class="nav-item nav-link active" href="./servers.html">Servers</a>
                             <a class="nav-item nav-link" href="./users.html">Users</a>
                             <a class="nav-item nav-link" href="#" id="logout">Logout ({{ username }})</a>
                         </div>
                     </nav>
                 </h6>
-                <h5>TODO: Dashboard</h5>
+                <div class="form-group">
+                    <label for="consoledata">Console data:</label>
+                    <textarea class="form-control" id="consoledata" rows="20" readonly></textarea>
+                </div>
+                <div class="form-group row justify-content-md-center">
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="servercommand" placeholder="Command...">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Execute</button>
+                </div>
+                <br>
             </div>
-        </div>
+        </form>
         <div class="copyright"><small class="form-text text-muted"><a href="https://ltheinrich.de">Webuniverse
                     &copy; 2020 Lennart Heinrich</a></small></div>
     </div>
