--- a/wu-app/app/user.html
+++ b/wu-app/app/user.html
@@ -23,21 +23,22 @@
                     <nav class="navbar navbar-expand-lg navbar-light bg-light">
                         <div class="navbar-nav">
                             <a class="nav-item nav-link" href="./">Dashboard</a>
-                            <a class="nav-item nav-link active" href="./users.html">Users </a>
+                            <a class="nav-item nav-link" href="./servers.html">Servers</a>
+                            <a class="nav-item nav-link active" href="./users.html">Users</a>
                             <a class="nav-item nav-link" href="#" id="logout">Logout ({{ username }})</a>
                         </div>
                     </nav>
                 </h6>
                 <div class="form-group row justify-content-md-center">
-                    <label for="username" class="col-sm-2 col-form-label">New username</label>
+                    <label for="newusername" class="col-sm-2 col-form-label">New username</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="new_username">
+                        <input type="text" class="form-control" id="newusername">
                     </div>
                 </div>
                 <div class="form-group row justify-content-md-center">
-                    <label for="password" class="col-sm-2 col-form-label">New password</label>
+                    <label for="newpassword" class="col-sm-2 col-form-label">New password</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="new_password">
+                        <input type="password" class="form-control" id="newpassword">
                     </div>
                 </div>
                 <div class="form-group row justify-content-md-center">
@@ -48,8 +49,7 @@
             </div>
         </form>
         <div class="copyright"><small class="form-text text-muted"><a href="https://ltheinrich.de">Webuniverse
-                    &copy;
-                    2020 Lennart Heinrich</a></small></div>
+                    &copy; 2020 Lennart Heinrich</a></small></div>
     </div>
 </body>
 
