--- a/wu-app/app/index.html
+++ b/wu-app/app/index.html
@@ -29,7 +29,8 @@
                         </div>
                     </nav>
                 </h6>
-                <h5>TODO: Dashboard</h5>
+                <h5>Linux servers resource usage</h5>
+                <div id="resourceslist" class="list-group"></div>
             </div>
         </div>
         <div class="copyright"><small class="form-text text-muted"><a href="https://ltheinrich.de">Webuniverse
