--- a/wu-app/app/settings.html
+++ b/wu-app/app/settings.html
@@ -12,28 +12,37 @@
 
 <body>
     <noscript>Please enable <strong>WebAssembly (Rust)</strong> and <strong>JavaScript</strong></noscript>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./settings.js"></script>
     <div id="vue" class="container">
         <div class="row justify-content-md-center">
             <img class="header-banner" src="../css/header.png" width="962" height="205">
         </div>
-        <div class="card">
+        <form id="change_setting" class="card">
             <div class="card-body">
                 <h6 class="card-title">
                     <nav class="navbar navbar-expand-lg navbar-light bg-light">
                         <div class="navbar-nav">
-                            <a class="nav-item nav-link active" href="./">Dashboard </a>
+                            <a class="nav-item nav-link" href="./">Dashboard</a>
                             <a class="nav-item nav-link" href="./servers.html">Servers</a>
-                            <a class="nav-item nav-link" href="./settings.html">Settings</a>
+                            <a class="nav-item nav-link active" href="./settings.html">Settings</a>
                             <a class="nav-item nav-link" href="./users.html">Users</a>
                             <a class="nav-item nav-link" href="#" id="logout">Logout ({{ username }})</a>
                         </div>
                     </nav>
                 </h6>
-                <h5>Linux servers resource usage</h5>
-                <div id="resourceslist" class="list-group"></div>
+                <div class="form-row justify-content-md-center">
+                    <div class="col-sm-4">
+                        <select id="setting_key" class="custom-select">
+                            <option disabled selected>Setting key</option>
+                        </select>
+                    </div>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" id="setting_value" placeholder="Setting value">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Change</button>
+                </div>
             </div>
-        </div>
+        </form>
         <div class="copyright"><small class="form-text text-muted"><a href="https://ltheinrich.de">Webuniverse
                     &copy; 2020 Lennart Heinrich</a></small></div>
     </div>
