--- a/wu-app/app/servers.html
+++ b/wu-app/app/servers.html
@@ -24,6 +24,7 @@
                         <div class="navbar-nav">
                             <a class="nav-item nav-link" href="./">Dashboard</a>
                             <a class="nav-item nav-link active" href="./servers.html">Servers</a>
+                            <a class="nav-item nav-link" href="./settings.html">Settings</a>
                             <a class="nav-item nav-link" href="./users.html">Users</a>
                             <a class="nav-item nav-link" href="#" id="logout">Logout ({{ username }})</a>
                         </div>
